--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url = postgres://dzodwdri:4GN2UTn3czmwkCN1q1DkupfIknPGZtVx@kesavan.db.elephantsql.com/dzodwdri
+spring.datasource.username = dzodwdri
+spring.datasource.password = 4GN2UTn3czmwkCN1q1DkupfIknPGZtVx
 
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Logging configuration
+logging.level.org.springframework=INFO
+logging.level.your.package=DEBUG
