--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url = postgres://dzodwdri:4GN2UTn3czmwkCN1q1DkupfIknPGZtVx@kesavan.db.elephantsql.com/dzodwdri
-spring.datasource.username = dzodwdri
-spring.datasource.password = 4GN2UTn3czmwkCN1q1DkupfIknPGZtVx
+spring.datasource.url =  jdbc:postgres://default:9EdZykRC1VjY@ep-crimson-paper-00734949-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb
+spring.datasource.username =  default
+spring.datasource.password = 9EdZykRC1VjY
+spring.datasource.driver-class-name = org.postgresql.Driver
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
